--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,19 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
+/* opcional: tus @source una sola vez al inicio */
+@source "../**/*.blade.php";
+@source "../**/*.js";
+@source "../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php";
+@source "../../storage/framework/views/*.php";
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+html {
+    @apply scroll-smooth;
+    overflow-y: scroll
+}
+body {
+    @apply bg-[var(--bg-color)] text-zinc-200 h-[100dvh];
+}
+
+:root {
+    --bg-color: #051019;
 }
