Log In terminado

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,14 +6,48 @@
 @source "../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php";
 @source "../../storage/framework/views/*.php";
 
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&display=swap');
+
 html {
     @apply scroll-smooth;
     overflow-y: scroll
 }
+
 body {
     @apply bg-[var(--bg-color)] text-zinc-200 h-[100dvh];
 }
 
 :root {
     --bg-color: #051019;
+    --font-auth: Baloo
+}
+
+.baloo-bhaijaan-2-regular {
+    font-family: "Baloo Bhaijaan 2", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.baloo-bhaijaan-2-medium {
+    font-family: "Baloo Bhaijaan 2", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
+
+.baloo-bhaijaan-2-bold {
+    font-family: "Baloo Bhaijaan 2", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+
+.baloo-bhaijaan-2-extrabold {
+    font-family: "Baloo Bhaijaan 2", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
 }
