--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -51,3 +51,11 @@ body {
     font-weight: 800;
     font-style: normal;
 }
+
+.glass {
+            background: rgba(255, 255, 255, .05);
+            border-radius: 1.5rem;
+            border: 1px solid rgba(255, 255, 255, .12);
+            box-shadow: 0 30px 80px rgba(0, 0, 0, .6);
+            backdrop-filter: blur(22px);
+        }
